<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Viable</string>
    <string name="app_label">Application:&#160;&#160;</string>
    <string name="app_prompt">Choose an Application</string>
    <string name="issue_type_prompt">Choose an Issue Type</string>
    <string name="issue_label">Issue Type: </string>
    <string name="created_date_label">Created:&#160;&#160;</string>
    <string name="modified_date_label">Modified:&#160;&#160;</string>
	<string name="report_bug">Submit</string>
	<string name="search">Search</string>    
	<string name="summary">Summary</string>
	<string name="description">Description</string>
	<string name="pkg_name">Package name:&#160;&#160;</string>
	<string name="affected_versions_label">Affected versions:&#160;&#160;</string>
	<string name="version_name">Version name:&#160;&#160;</string>
	<string name="version_code">Version id:&#160;&#160;</string>
	<string name="phone_model">Phone Model:&#160;&#160;</string>
	<string name="phone_device">Device:&#160;&#160;</string>
	<string name="phone_sdk">SDK version:&#160;&#160;</string>
	<string name="error">Error:&#160;&#160;</string>
	<string name="show_details">Show Details</string>
	<string name="hide_details">Hide Details</string>
	<string name="comments">Comments:</string>
	<string name="all">All</string>
	<string name="filter_by_version">Filter By Version</string>
	<string name="maintainer">Maintainer:&#160;&#160;</string>
	<string name="website">Website</string>
	
	<string name="apps">Applications</string>
	<string name="issue_type">Issue Type</string>
	<string name="unresolved">Unresolved</string>
	<string name="resolved">Fixed</string>
	<string name="bugs">Bugs</string>
	<string name="improvements">Improvements</string>
	<string name="features">Features</string>
	<string name="version">Version</string>
	<string name="release_date">Release Date</string>
	<string name="unreleased">Unreleased</string>
	
	<string name="my_issues">My Issues</string>
	<string name="all_issues">All Issues</string>
	<string name="refresh">Refresh</string>
	<string name="issue_id">Issue Id:&#160;&#160;</string>
	<string name="report_issue">Report Issue</string>
	
	<string name="bug_comment">Report Crash</string>
	<string name="bug_comment_prompt">The crash you experienced has already been reported to the {appName} development team.  Would you like to add a comment?</string>
	<string name="uninstall_comment">Provide Feedback</string>
	<string name="uninstall_comment_prompt">You recently uninstalled {appName}.  Feedback helps developers improve their products.  Would you like to provide the developer a reason for the uninstall?</string>
	<string name="uninstall_reasons">Uninstall reasons.</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>	
    <string name="title_issues_list">Issues</string>
	<string name="menu_delete">Delete</string>
	<string name="choose_one">Choose One</string>
	
	<string name="bug_blocker_open_name">Blocking Bug</string>
	<string name="bug_critical_open_name">Critical Bug</string>
	<string name="bug_major_open_name">Major Bug</string>
	<string name="bug_minor_open_name">Minor Bug</string>
	<string name="bug_trivial_open_name">Trivial Bug</string>
	<string name="bug_resolved_name">Resolved Bug</string>
	<string name="bug_closed_name">Closed Bug</string>
	<string name="feature_blocker_open_name">Blocking Feature</string>
	<string name="feature_critical_open_name">Critical Feature</string>
	<string name="feature_major_open_name">Major Feature</string>
	<string name="feature_minor_open_name">Minor Feature</string>
	<string name="feature_trivial_open_name">Trivial Feature</string>
	<string name="feature_resolved_name">Resolved Feature</string>
	<string name="feature_closed_name">Closed Feature</string>

	<string name="improvement_blocker_open_name">Blocking Improvement</string>
	<string name="improvement_critical_open_name">Critical Improvement</string>
	<string name="improvement_major_open_name">Major Improvement</string>
	<string name="improvement_minor_open_name">Minor Improvement</string>
	<string name="improvement_trivial_open_name">Trivial Improvement</string>
	<string name="improvement_resolved_name">Resolved Improvement</string>
	<string name="improvement_closed_name">Closed Improvement</string>

	
	<string name="bug_blocker_open_desc">...crash prevents general use of the application.</string>
	<string name="bug_critical_open_desc">...crash prevents use of a major feature or otherwise causes data loss.</string>
	<string name="bug_major_open_desc">...causes a major loss of functionality.</string>
	<string name="bug_minor_open_desc">...causes a minor loss of functionality, or other problem where an easy workaround exists.</string>
	<string name="bug_trivial_open_desc">...a cosmetic problem or nuisance usability issue.</string>
	<string name="bug_resolved_desc">...has been fixed awaiting a code release.</string>
	<string name="bug_closed_desc">...has been verified fixed in a code release.</string>
	<string name="feature_blocker_open_desc"></string>
	<string name="feature_critical_open_desc">...would provide a major benefit for most users.</string>
	<string name="feature_major_open_desc"></string>
	<string name="feature_minor_open_desc"></string>
	<string name="feature_trivial_open_desc">...nice to have, would provide benefit for a subset of users.</string>
	<string name="feature_resolved_desc"></string>
	<string name="feature_closed_desc"></string>

	<string name="improvement_blocker_open_desc"></string>
	<string name="improvement_critical_open_desc">...super nifty enhancement that would provide a major benefit for most users.</string>
	<string name="improvement_major_open_desc"></string>
	<string name="improvement_minor_open_desc"></string>
	<string name="improvement_trivial_open_desc">...nice to have enhancement, would provide benefit for a subset of users.</string>
	<string name="improvement_resolved_desc"></string>
	<string name="improvement_closed_desc"></string>
	
	<string name="create_error_msg">Viable was unable to load the issue information for this application.  Issue tracking may be misconfigured or temporarily unavailable.</string>
	<string name="service_error_msg">Viable experienced an error contacting the issue tracker for this application.  Issue tracking or network access may be temporarily unavailable.</string>
	
	<string name="auth_label">GCL Account</string>
	<string name="auth_failed">Authentication Failed</string>
	<string name="fatal_error">Fatal Error</string>
	
	<string name="disconnected_title">Network Unavailable</string>
	<string name="retry">Retry</string>
	<string name="close">Close</string>
	<string name="disconnected_msg">A network connection is required to access the issue tracking systems.  If a connection cannot be re-established, then Viable will be closed.</string>
	
    <string name="eula_title">End User Licensing Agreement</string>
    <string name="eula_accept">I accept.</string>
    <string name="eula_refuse">I refuse.</string>	
</resources>
