<LinearLayout android:id="@+id/LinearLayout01"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical">
	<Spinner android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/AppNameSpinner"
		android:prompt="@string/app_prompt"></Spinner>
	<TextView android:text="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/DescriptionTextView"></TextView>
	<TextView android:text="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/LeadTextView" android:layout_marginTop="5sp"></TextView>
	<TextView android:text="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/URLTextView" android:autoLink="web"></TextView>

<TableLayout android:id="@+id/TableLayout01" android:layout_height="wrap_content" android:layout_marginTop="20sp" android:layout_width="fill_parent"><TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="wrap_content"><TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:text="@string/issue_type" android:layout_width="fill_parent" android:layout_weight="1"></TextView>
<TextView android:id="@+id/TextView02" android:layout_height="wrap_content" android:text="@string/unresolved" android:layout_weight="1" android:layout_width="fill_parent" android:layout_gravity="center_horizontal"></TextView>
<TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:text="@string/resolved" android:layout_weight="1" android:layout_width="fill_parent" android:layout_gravity="left"></TextView>
</TableRow><TableRow android:id="@+id/TableRow02" android:layout_height="wrap_content" android:layout_width="wrap_content"><TextView android:id="@+id/TextView04" android:layout_height="wrap_content" android:text="@string/bugs" android:layout_width="fill_parent" android:layout_weight="1"></TextView><TextView android:text="@+id/TextView04" android:layout_height="wrap_content" android:id="@+id/BugsUnresTextView" android:layout_weight="1" android:layout_width="fill_parent" android:layout_gravity="center_horizontal"></TextView>

<TextView android:text="@+id/TextView05" android:layout_height="wrap_content" android:id="@+id/BugsResTextView" android:layout_weight="1" android:layout_width="fill_parent" android:layout_gravity="center_horizontal"></TextView>
</TableRow><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow03"><TextView android:layout_height="wrap_content" android:id="@+id/TextView05" android:text="@string/improvements" android:layout_weight="1" android:layout_width="fill_parent"></TextView><TextView android:text="@+id/TextView04" android:layout_height="wrap_content" android:id="@+id/ImprsUnresTextView" android:layout_weight="1" android:layout_width="fill_parent" android:layout_gravity="center_horizontal"></TextView>

<TextView android:text="@+id/TextView05" android:layout_height="wrap_content" android:id="@+id/ImprsResTextView" android:layout_weight="1" android:layout_width="fill_parent" android:layout_gravity="center_horizontal"></TextView>
</TableRow><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TableRow04"><TextView android:layout_height="wrap_content" android:id="@+id/TextView06" android:text="@string/features" android:layout_weight="1" android:layout_width="fill_parent"></TextView><TextView android:text="@+id/TextView04" android:layout_height="wrap_content" android:id="@+id/FeaturesUnresTextView" android:layout_weight="1" android:layout_width="fill_parent" android:layout_gravity="center_horizontal"></TextView>

<TextView android:text="@+id/TextView05" android:layout_height="wrap_content" android:id="@+id/FeaturesResTextView" android:layout_weight="1" android:layout_width="fill_parent" android:layout_gravity="center_horizontal"></TextView>
</TableRow>

</TableLayout>

<TableLayout android:layout_height="wrap_content" android:layout_marginTop="20sp" android:id="@+id/VersionTableLayout" android:layout_width="fill_parent" android:stretchColumns="0, 1"><TableRow android:id="@+id/TableRow05" android:layout_height="wrap_content" android:layout_width="fill_parent"><TextView android:id="@+id/TextView07" android:layout_height="wrap_content" android:text="@string/version" android:layout_weight="1" android:layout_width="fill_parent"></TextView>
<TextView android:id="@+id/TextView08" android:layout_height="wrap_content" android:text="@string/release_date" android:layout_weight="1" android:layout_width="fill_parent"></TextView>
</TableRow></TableLayout>

</LinearLayout>
