<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:isScrollContainer="true">

<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_label" android:gravity="center_vertical"></TextView><Spinner android:layout_height="wrap_content" android:id="@+id/AppNameSpinner" android:layout_width="fill_parent" android:prompt="@string/app_prompt"></Spinner><Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/AppVersionSpinner" android:prompt="@string/filter_by_version"></Spinner><ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:indeterminateBehavior="repeat" android:id="@+id/ProgressBar"></ProgressBar></LinearLayout>
<ListView android:id="@+id/IssueListView" android:layout_height="fill_parent" android:layout_width="fill_parent"></ListView>


</LinearLayout>
